# ClimaX

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  SUPPORT.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: mkdocs.yml
configs/: climate_downscaling.yaml  climate_projection.yaml  global_forecast_climax.yaml  pretrain_climax.yaml  regional_forecast_climax.yaml
docker/: Dockerfile  environment.yml
docs/: index.md  install.md  usage.md
docs/overrides/: home.html
docs/reference/: global_forecast.md  pretrain.md
docs/stylesheets/: extra.css
install/: index.html
notebooks/: finetune-pyrain.ipynb
notebooks/pyrain/: collect_data.py  dataset.py  metrics.py  normalize.json  utils.py
overrides/: home.html
reference/global_forecast/: index.html
reference/pretrain/: index.html
search/: search_index.json
snakemake_configs/AWI-ESM/: Snakefile  config_10m_u_component_of_wind.yml  config_10m_v_component_of_wind.yml  config_2m_temperature.yml  config_geopotential.yml  config_specific_humidity.yml  config_temperature.yml  config_u_component_of_wind.yml  config_v_component_of_wind.yml
snakemake_configs/CMCC/: Snakefile  config_geopotential.yml  config_temperature.yml  config_u_component_of_wind.yml  config_v_component_of_wind.yml
snakemake_configs/HAMMOZ/: Snakefile  config_10m_u_component_of_wind.yml  config_10m_v_component_of_wind.yml  config_2m_temperature.yml  config_geopotential.yml  config_specific_humidity.yml  config_temperature.yml  (+2 more)
src/climax/: arch.py  (+1 more)
tests/: test_parallel_patch_embed.py
usage/: index.html
(+46 files in other folders)
